--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style/reset.css">
-    <link rel="stylesheet" href="style/style.css">
- <style>
 
- </style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Greenshop</title>
+  <link rel="stylesheet" href="style/reset.css" />
+  <link rel="stylesheet" href="style/style.css" />
+
 </head>
+
+
 <body>
-    <a href="registration.html"></a>
+
+  <a href="registration.html"></a>
+  <header class="header">
+    <strong class="header_logo"><img src="images/logo.svg" alt="logo" /></strong>
+
+    <div class="header_menu">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">Plant Care</a></li>
+        <li><a href="">Blogs</a></li>
+      </ul>
+    </div>
+    <a href="#" class="header_login">Login</a>
+  </header>
+  <main>
+    <section class="visual">
+      <div class="visual_text">
+        <h1>WELCOME TO GREENSHOP</h1>
+        <div>LET'S MAKE A BETER <span class="color_text">PLANET</span></div>
+        <p class="text_block">
+          We are an online plant shop offering a wide range of cheap and
+          trendy plants. Use our plants to create an unique Urban jungle.Order
+          your favorite plants
+        </p>
+        <a href="#shop">Shop</a>
+      </div>
+      <div class="visual_img">
+        <img src="images/kyvsh.svg" alt="flower" />
+        <img src="images/kyvsh2.svg" alt="flower" />
+      </div>
+    </section>
+  </main>
 </body>
+
 </html>
