--- a/registration.html
+++ b/registration.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Registration</title>
 
-    <link rel="stylesheet" href="style/reset.css" />
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=, initial-scale=1.0" />
+  <title>Registration</title>
 
-  <body>
-    <form action="#" class="form-holder">
-      <p class="register">Login | Register</p>
+  <link rel="stylesheet" href="style/reset.css" />
+  <link rel="stylesheet" href="style/style.css" />
+</head>
 
-      <p class="form">Enter your emaill password to register</p>
+<body>
+  <form action="#" class="form-holder">
+    <p class="register">Login | Register</p>
 
-      <input class="input" type="text" placeholder="Username" />
+    <p class="form">Enter your emaill password to register</p>
 
-      <br />
-      <br />
+    <input class="input" type="text" placeholder="Username" />
 
-      <input type="email" placeholder="enter your emaill adress" />
-      <br />
-      <br />
-      <input type="password" placeholder=" password" /><br />
-      <br />
-      <input type="password" placeholder=" confirm password" />
-      <br />
-      <br />
-      <button class="box" type="submit" style="display: block; width: 100%">
-        Register
-      </button>
+    <br />
+    <br />
 
-      <br />
-      <br />
-      <p class="form">Or register with</p>
-    </form>
+    <input type="email" placeholder="enter your emaill adress" />
+    <br />
+    <br />
+    <input type="password" placeholder=" password" /><br />
+    <br />
+    <input type="password" placeholder=" confirm password" />
+    <br />
+    <br />
+    <button class="box" type="submit" style="display: block; width: 100%">
+      Register
+    </button>
 
-    <div class="form-holder">
-      <a href="https://www.google.com/" target="_blank"
-        ><img src="images/google.svg" alt="" /></a
-      ><br />
-      <a href="https://www.facebook.com/" target="_blank"
-        ><img src="images/facebook.svg" alt=""
-      /></a>
-    </div>
-  </body>
+    <br />
+    <br />
+    <p class="form">Or register with</p>
+  </form>
+
+  <div class="form-holder">
+    <a href="https://www.google.com/" target="_blank"><img src="images/google.svg" alt="" /></a><br />
+    <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg" alt="" /></a>
+  </div>
+</body>
+
 </html>
