--- a/index.html
+++ b/index.html
@@ -13,31 +13,32 @@
 
 <body>
 
-  <a href="registration.html"></a>
   <header class="header">
     <strong class="header_logo"><img src="images/logo.svg" alt="logo" /></strong>
+    <nav class="header_menu">
 
-    <div class="header_menu">
       <ul>
-        <li><a href="">Home</a></li>
+        <li>
+          <a href="">Home</a>
+        </li>
         <li><a href="">Shop</a></li>
         <li><a href="">Plant Care</a></li>
         <li><a href="">Blogs</a></li>
       </ul>
-    </div>
+    </nav>
     <a href="#" class="header_login">Login</a>
   </header>
   <main>
     <section class="visual">
       <div class="visual_text">
         <h1>WELCOME TO GREENSHOP</h1>
-        <div>LET'S MAKE A BETER <span class="color_text">PLANET</span></div>
+        <h2>LET'S MAKE A BETER <span class="color_text">PLANET</span></h2>
         <p class="text_block">
           We are an online plant shop offering a wide range of cheap and
           trendy plants. Use our plants to create an unique Urban jungle.Order
           your favorite plants
         </p>
-        <a href="#shop">Shop</a>
+        <a class="button" href="registration.html">Shop Now</a>
       </div>
       <div class="visual_img">
         <img src="images/kyvsh.svg" alt="flower" />
