--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <a class="button" href="registration.html">Shop Now</a>
       </div>
       <div class="visual_img">
-        <img src="images/kyvsh.svg" alt="flower" />
-        <img src="images/kyvsh2.svg" alt="flower" />
+        <img src="images/img-banner.png" alt="flower" />
+
       </div>
     </section>
   </main>
