--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <title>Greenshop</title>
   <link rel="stylesheet" href="style/reset.css" />
   <link rel="stylesheet" href="style/style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+
 
 </head>
 
@@ -55,27 +52,31 @@
     <div class="content clearfix">
       <!-- ліва колонка -->
       <aside class="sidebare">
-        <p>Categories</p>
+        <h2>Categories</h2>
+
         <ul class="sidebare__menu">
-          <li>House Planst</li>
-          <li>Potter Plants</li>
-          <li>Seeds</li>
-          <li>Small plants</li>
-          <li>Big Plants</li>
-          <li>Succulents</li>
-          <li>Treraiums</li>
-          <li>Gardening</li>
-          <li>Accesories</li>
+
+          <li class="link-list active"> <a href="">House Planst</a></li>
+          <li> <a href="">Potter Plants</a></li>
+          <li> <a href="">Seeds</a></li>
+          <li> <a href="">Small plants</a></li>
+          <li> <a href="">Big Plants</a></li>
+          <li> <a href="">Succulents</a></li>
+          <li> <a href="">Treraiums</a></li>
+          <li> <a href="">Gardening</a></li>
+          <li> <a href="">Accesories</a></li>
         </ul>
-        <img src="images/banner.svg" alt="">
+
+
+        <a href=""> <img src="images/banner.svg" alt=""></a>
       </aside>
       <!-- права колонка -->
       <section class="content-holder">
         <div class="filter clearfix ">
           <ul>
-            <li>All Planst</li>
-            <li>New Arivals</li>
-            <li>Sale</li>
+            <li> <a href="">All Planst</a></li>
+            <li> <a href="">New Arivals</a></li>
+            <li> <a href="">Sale</a></li>
           </ul>
         </div>
         <div class="box_filter">
@@ -84,27 +85,29 @@
         </div>
 
         <div class="cards">
-          <div>
-            <img src="images/p5.png">
-            <p>Blushing Bromeliad</p>
-            <p><span class="color_text">139.00$</span></p>
+          <div class="img_cards">
+            <img src="images/p5.png" alt="">
+            <p>Blushing Bromeliadeed</p>
+            <span class="color_text">139.00$</span>
           </div>
-          <div>
+        </div>
 
 
 
 
 
 
-          </div>
+          
           <div class="pagination">
 
+
             <ul>
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li  class="link-list active"> <a href="">1</a></li>
+              <li class="link-list"> <a href="">2</a></li>
+              <li class="link-list"> <a href="">3</a></li>
+              <li class="link-list"> <a href="">4</a></li>
             </ul>
+
 
 
           </div>
