--- a/index.html
+++ b/index.html
@@ -121,6 +121,34 @@
     </div>
 
 
+    <div class="plants">
+      <div class="plants-item">
+        <img src="images/p5.png" alt="">
+        <div class="plants-text">
+          <h2>SUMMER CACTUS
+            & SUCCULENTS
+          </h2>
+          <P>We are an online plant shop offering
+            a wide range of cheap and trendy plants</P>
+          <a class="button" href="#">Find more <img src="images/arrow-right.svg" alt=""></a>
+        </div>
+      </div>
+
+
+
+
+
+      <div class="plants-item"><img src="images/p3.png" alt="">
+        <div class="plants-text">
+          <p>TEXT TEXT</p>
+
+        </div>
+
+      </div>
+
+
+
+
   </main>
 </body>
 
