--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="visual">
       <div class="visual_text">
         <h2>WELCOME TO GREENSHOP</h2>
-        <h3>LET'S MAKE A BETER <span class="color_text">PLANET</span></h3>
+        <h1>LET'S MAKE A BETER <span class="color_text">PLANET</span></h1>
         <p class="text_block">
           We are an online plant shop offering a wide range of cheap and
           trendy plants. Use our plants to create an unique Urban jungle.Order
@@ -65,41 +65,100 @@
 
         <a target="_blank" href=""> <img src="images/banner.svg" alt=""></a>
       </aside>
+
       <!-- права колонка -->
       <section class="content-holder">
-        <div class="filter clearfix ">
+        <div class=" filter clearfix ">
           <ul class="filter_menu">
             <li class="active_menu"> <a href="">All Planst</a></li>
             <li> <a href="">New Arivals</a></li>
             <li> <a href="">Sale</a></li>
           </ul>
-        </div>
-        <label class="box_filter" for="#">
-          <span>Short By:</span>
-          <select name="#" id="#" class="filter_select">
-            <option value="">Blushing Bromeliadeed</option>
-            <option value="">Default Sorting</option>
-            <option value="price">Default Sorting</option>
-          </select>
-        </label>
+          <label class="box_filter" for="#">
+            <span>Short By:</span>
+            <select name="#" id="#" class="filter_select">
+              <option value="">Blushing Bromeliadeed</option>
+              <option value="">Angel Wing Begonia</option>
+              <option value="price">African Violet</option>
+              <option value="">Beach Spider Lily</option>
+              <option value="">Aluminum Plant</option>
+              <option value="">Bird's nest Fern</option>
+              <option value="">Blushing Bromeliadeed</option>
+              <option value="">Blushing Bromeliadeed</option>
+              <option value="">Blushing Bromeliadeed</option>
 
+            </select>
+
+          </label>
+
+
+        </div>
         <div class="cards">
+          <div class="img_cards">
+            <img src="images/p1.png" alt="">
+            <p>Barberton Daisy </p>
+            <span class="color_text">119.00$</span>
+          </div>
+
+
+          <div class="img_cards">
+            <img src="images/p2.png" alt="">
+            <p>Angel Wing Begonia</p>
+            <span class="color_text">169.00$</span>
+          </div>
+          <div class="img_cards">
+            <img src="images/p3.png" alt="">
+            <p>African Violet</p>
+            <span class="color_text">199.00$</span>
+          </div>
+
+          <div class="img_cards">
+            <img src="images/p4.png" alt="">
+            <p>Beach Spider Lily</p>
+            <span class="color_text">129.00$</span>
+          </div>
           <div class="img_cards">
             <img src="images/p5.png" alt="">
             <p>Blushing Bromeliadeed</p>
             <span class="color_text">139.00$</span>
           </div>
+          <div class="img_cards">
+            <img src="images/p6.png" alt="">
+            <p>Aluminum Plant</p>
+            <span class="color_text">179.00$</span>
+          </div>
+          <div class="img_cards">
+            <img src="images/p7.png" alt="">
+            <p>Bird's nest Fern</p>
+            <span class="color_text">99.00$</span>
+          </div>
+          <div class="img_cards">
+            <img src="images/p8.png" alt="">
+            <p>Broadleaf Lady Palm</p>
+            <span class="color_text">59.00$</span>
+          </div>
+          <div class="img_cards">
+            <img src="images/p9.png" alt="">
+            <p>Chinese Evergreen</p>
+            <span class="color_text">39.00$</span>
+          </div>
         </div>
-        <div>
-          <ul class="pagination">
-            <li class="active"> <a href="">1</a></li>
-            <li> <a href="">2</a></li>
-            <li> <a href="">3</a></li>
-            <li> <a href="">4</a></li>
-          </ul>
-        </div>
+
+
+        <ul class="pagination">
+          <li class="active"> <a href="">1</a></li>
+          <li> <a href="">2</a></li>
+          <li> <a href="">3</a></li>
+          <li> <a href="">4</a></li>
+        </ul>
+
       </section>
     </div>
+
+
+
+
+
     <div class="plants">
       <div class="plants-item">
         <img src="images/imag1.png" alt="">
@@ -138,10 +197,6 @@
           <h3>Cactus & Succulent Care tips</h3>
           <p class="color-box">Cacti are succulents are easy care plants for any home or patio.</p>
           <a class="linc-flex" href="">Read More</a>
-
-
-
-
 
         </div>
 
