--- a/index.html
+++ b/index.html
@@ -86,58 +86,113 @@
               <option value="">Blushing Bromeliadeed</option>
               <option value="">Blushing Bromeliadeed</option>
               <option value="">Blushing Bromeliadeed</option>
-
             </select>
-
           </label>
-
-
         </div>
+
         <div class="cards">
+
           <div class="img_cards">
+            <ul class="card-link">
+
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
+            <span class="sale-ikon">13%OFF</span>
+
             <img src="images/p1.png" alt="">
             <p>Barberton Daisy </p>
             <span class="color_text">119.00$</span>
           </div>
-
-
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
+            <span class="sale-ikon">13%OFF</span>
+
             <img src="images/p2.png" alt="">
             <p>Angel Wing Begonia</p>
             <span class="color_text">169.00$</span>
           </div>
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
             <img src="images/p3.png" alt="">
             <p>African Violet</p>
             <span class="color_text">199.00$</span>
           </div>
 
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
             <img src="images/p4.png" alt="">
             <p>Beach Spider Lily</p>
             <span class="color_text">129.00$</span>
           </div>
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
             <img src="images/p5.png" alt="">
             <p>Blushing Bromeliadeed</p>
             <span class="color_text">139.00$</span>
           </div>
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
             <img src="images/p6.png" alt="">
             <p>Aluminum Plant</p>
             <span class="color_text">179.00$</span>
           </div>
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
+
             <img src="images/p7.png" alt="">
             <p>Bird's nest Fern</p>
             <span class="color_text">99.00$</span>
           </div>
+
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
             <img src="images/p8.png" alt="">
             <p>Broadleaf Lady Palm</p>
             <span class="color_text">59.00$</span>
           </div>
+
           <div class="img_cards">
+            <ul class="card-link">
+              <li><a href=""><img src="images/korz.svg" alt=""></a></li>
+              <li><a href=""><img src="images/ser.svg" alt=""></a></li>
+              <li><a href=""><img src="images/poshuk.svg" alt=""></a></li>
+            </ul>
+
             <img src="images/p9.png" alt="">
             <p>Chinese Evergreen</p>
             <span class="color_text">39.00$</span>
@@ -154,10 +209,6 @@
 
       </section>
     </div>
-
-
-
-
 
     <div class="plants">
       <div class="plants-item">
